// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component testing Disable multiple selected 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ fsuloP"
  >
    <div
      class=" css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        aria-disabled="true"
        class=" css-yw5jbj-control"
      >
        <div
          class=" css-1iral9k-ValueContainer"
        >
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-5kixvp-MultiValueGeneric"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-5kixvp-MultiValueGeneric"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-1urfujn-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-7-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-7-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-hKMtZM jZaZJX"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="true"
          class="sc-jSMfEi kaCdOG css-1jcex0u-MenuList"
          id="react-select-7-listbox"
          role="listbox"
        >
          <div
            class=" css-1ufqtev-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Disable not selected 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ fsuloP"
  >
    <div
      class=" css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        aria-disabled="true"
        class=" css-yw5jbj-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-1wzpoj0-placeholder"
            id="react-select-5-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-1urfujn-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-5-listbox"
              aria-describedby="react-select-5-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-5-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-hKMtZM jZaZJX"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-jSMfEi kaCdOG css-1jcex0u-MenuList"
          id="react-select-5-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-5-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-5-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Disable one selected 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ fsuloP"
  >
    <div
      class=" css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        aria-disabled="true"
        class=" css-yw5jbj-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-tncq6p-singleValue"
          >
            hoge
          </div>
          <div
            class=" css-1urfujn-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-6-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-6-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-hKMtZM jZaZJX"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#B3BAC1"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-jSMfEi kaCdOG css-1jcex0u-MenuList"
          id="react-select-6-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class=" css-1hd25el-option"
            id="react-select-6-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-6-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Error multiple selected 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ kNfXhc"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-10-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-q6ehzp-control"
      >
        <div
          class=" css-1iral9k-ValueContainer"
        >
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1644w8u-MultiValueGeneric"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1644w8u-MultiValueGeneric"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-10-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-10-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-gsnTZi"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-hKMtZM jZaZJX"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-vcx9vk-menu"
      >
        <div
          aria-multiselectable="true"
          class="sc-jSMfEi kaCdOG css-1jcex0u-MenuList"
          id="react-select-10-listbox"
          role="listbox"
        >
          <div
            class=" css-1ufqtev-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Error not selected 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ kNfXhc"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-q6ehzp-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-lunmsi-placeholder"
            id="react-select-8-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-8-listbox"
              aria-describedby="react-select-8-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-8-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-hKMtZM jZaZJX"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-vcx9vk-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-jSMfEi kaCdOG css-1jcex0u-MenuList"
          id="react-select-8-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-8-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-8-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Error one selected 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ kNfXhc"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-q6ehzp-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-ayvmsf-singleValue"
          >
            hoge
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-9-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-9-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-gsnTZi"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-hKMtZM jZaZJX"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#EB0A4E"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-vcx9vk-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-jSMfEi kaCdOG css-1jcex0u-MenuList"
          id="react-select-9-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class=" css-1hd25el-option"
            id="react-select-9-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-9-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Normal multiple selected 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ kNfXhc"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-1oh1mzt-control"
      >
        <div
          class=" css-1iral9k-ValueContainer"
        >
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1x88s89-MultiValueGeneric"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-tiolb5-multiValue"
          >
            <div
              class=" css-1x88s89-MultiValueGeneric"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class=" css-1v8dlmp-MultiValueRemove"
              role="button"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-4-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-4-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-gsnTZi"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-hKMtZM jZaZJX"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="true"
          class="sc-jSMfEi kaCdOG css-1jcex0u-MenuList"
          id="react-select-4-listbox"
          role="listbox"
        >
          <div
            class=" css-1ufqtev-NoOptionsMessage"
          >
            Not found
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Normal not selected 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ kNfXhc"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-1oh1mzt-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-ydlppi-placeholder"
            id="react-select-2-placeholder"
          >
            Select...
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-2-listbox"
              aria-describedby="react-select-2-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-2-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-hKMtZM jZaZJX"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-jSMfEi kaCdOG css-1jcex0u-MenuList"
          id="react-select-2-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-2-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-2-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Select component testing Normal one selected 1`] = `
<DocumentFragment>
  <div
    class="sc-eCYdqJ kNfXhc"
  >
    <div
      class=" css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class=" css-1oh1mzt-control"
      >
        <div
          class=" css-14yxm9c-ValueContainer"
        >
          <div
            class=" css-t1czkd-singleValue"
          >
            hoge
          </div>
          <div
            class=" css-17e9r92-Input"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-3-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-3-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class=" css-1hb7zxy-IndicatorsContainer"
        >
          <div
            class="sc-gsnTZi"
          >
            <div
              aria-hidden="true"
              class=" css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    transform="translate(-657 -463)"
                  >
                    <path
                      d="M0,0H24V24H0Z"
                      fill="none"
                      transform="translate(657 463)"
                    />
                    <g
                      transform="translate(659 465)"
                    >
                      <rect
                        fill="none"
                        height="17.143"
                        transform="translate(1.429 1.429)"
                        width="17.143"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="#041C33"
                        r="10"
                      />
                      <g
                        transform="translate(2 2)"
                      >
                        <rect
                          fill="none"
                          height="16"
                          width="16"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(12.242 1.333) rotate(45)"
                          width="3.428"
                        />
                        <rect
                          fill="#fff"
                          height="15.428"
                          rx="1.714"
                          transform="translate(1.333 3.758) rotate(-45)"
                          width="3.428"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class=" css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-hKMtZM jZaZJX"
            >
              <span
                class="sc-dkzDqf kPdxGi"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H24V24H0Z"
                    fill="none"
                  />
                  <path
                    d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
                    fill="#041C33"
                    transform="translate(-1.414 -1.114)"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class=" css-fqzh9e-menu"
      >
        <div
          aria-multiselectable="false"
          class="sc-jSMfEi kaCdOG css-1jcex0u-MenuList"
          id="react-select-3-listbox"
          role="listbox"
        >
          <div
            aria-disabled="false"
            aria-selected="true"
            class=" css-1hd25el-option"
            id="react-select-3-option-0"
            role="option"
            tabindex="-1"
          >
            hoge
          </div>
          <div
            aria-disabled="false"
            aria-selected="false"
            class=" css-1mw1c1j-option"
            id="react-select-3-option-1"
            role="option"
            tabindex="-1"
          >
            huga
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
